# NebulosaBot

./: .env.example  .gga  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  app.py  opencode.json  pyproject.toml  pyproject.toml.bak  requirements.txt
.github/workflows/: ci.yml  code-quality.yml
Diagramas/: DiagramaCasosUso.mmd  DiagramaEntidad-Relación.mmd  DiagramaSecuencia.mmd  Ecosistema-Comandos.mmd
bot/: __init__.py  __main__.py  bot.py  config.py  constants.py
bot/cogs/: core.py  greetings.py  ocio.py  sentinel.py  setup.py  stellar.py  tickets.py  utility.py
bot/core/: cache.py  context.py  database.py  i18n.py  realtime.py
bot/core/db/: __init__.py  base.py  economy_db.py  greeting_db.py  guild_db.py  infraction_db.py  member_db.py  ticket_audit_db.py  ticket_category_db.py  ticket_db.py  ticket_note_db.py
bot/listeners/: audit_listener.py  xp_listener.py
bot/locales/: en.json  es.json
bot/models/: economy_config.py  greeting_config.py  guild.py  infraction.py  member.py  ticket.py  ticket_category.py  ticket_note.py
bot/services/: economy_service.py  greeting_service.py  guild_service.py  image_service.py  infraction_service.py  integrity_report.py  logging_service.py  ticket_field_service.py  ticket_invariants.py  ticket_service.py  transcript_service.py
bot/utils/: brand.py  checks.py  embeds.py  paginator.py  ticket_helpers.py  time.py  timeparse.py
bot/views/: confirmation.py  tickets.py
bot/webhook/: __init__.py  auth.py  models.py  server.py
dashboard/: .env.example  .env.local.example  .gitignore  middleware.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
dashboard/__tests__/: _server-only-stub.js  middleware.test.ts  next-compiled-path-to-regexp.d.ts
dashboard/__tests__/app/: audit-panel.test.tsx  authenticated-boundaries.test.tsx  config-page.test.tsx  greeting-page.test.tsx  reopen-ticket-dialog.test.tsx  tickets-page.test.tsx
dashboard/__tests__/components/: sidebar.test.tsx
dashboard/__tests__/contract/: ticket-invariants.test.ts
dashboard/__tests__/lib/: discord.test.ts  ticket-invariants.test.ts  types.test.ts  webhook-sync.test.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/(authenticated)/: error.tsx  layout.tsx  loading.tsx  page.tsx
dashboard/app/login/: page.tsx
dashboard/components/: config-form.tsx  guild-card.tsx  sidebar.tsx
dashboard/lib/: discord.ts  supabase.ts  ticket-invariants.server.ts  ticket-invariants.ts  types.ts  webhook-sync.ts
dashboard/lib/actions/: economy-actions.ts  greeting-actions.ts  guild-actions.ts  ticket-actions.ts
dashboard/lib/supabase/: middleware.ts
docs/: MANUAL.md
migrations/: 001_initial_schema.sql  002_ticket_categories.sql  003_economy_config.sql  003_subtickets_notes.sql  004_greeting_config.sql  005_ticket_audit.sql  006_drop_user_table.sql  007_realtime_publication.sql  008_ticket_note_rls.sql  009_member_increment_rpc.sql  010_rpc_revoke_grants.sql  011_ticket_channel_index.sql  012_ticket_audit.sql  013_ticket_intake_metadata.sql  014_ticket_category_fields.sql  015_ticket_lifecycle_reliability.sql  016_greeting_onboarding_channel.sql
openspec/: config.yaml
openspec/changes/arch-debt/: tasks.md
openspec/changes/audit-product-ux-tickets/: exploration.md
openspec/changes/bot-docs-polish/: apply-progress.md
openspec/changes/bot-ux/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/cache-sync-realtime/: proposal.md  tasks.md  verify-report.md
openspec/changes/ci-master-green/: tasks.md
openspec/changes/cloudflare-webhook-cleanup/: exploration.md
openspec/changes/code-quality/: design.md  tasks.md  verify-report.md
openspec/changes/dashboard-fixes/: design.md  tasks.md
openspec/changes/dashboard-ticket-mgmt/: tasks.md
openspec/changes/default-ticket-categories-and-smoke-fixes/: exploration.md
openspec/changes/greeting-card-toggle/: design.md  proposal.md  tasks.md
openspec/changes/i18n-and-ephemeral-standard/: tasks.md  verify-report.md
openspec/changes/nebulosabot-foundation/: exploration.md
openspec/changes/ops-hardening/: exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/phase-1-core-foundation/: design.md  proposal.md  tasks.md
openspec/changes/phase-2-sentinel/: apply-progress.md
openspec/changes/phase-3-tickets/: tasks.md
openspec/changes/phase-4-economy/: exploration.md  proposal.md  tasks.md
openspec/changes/phase-5-welcome-logging/: tasks.md
openspec/changes/phase-7-dashboard/: tasks.md
openspec/changes/qa-coverage-dead-code/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/qa-hygiene-warnings/: apply-progress.md  exploration.md
openspec/changes/refactor-ticket-complexity/: apply-progress.md  proposal.md  tasks.md  verify-report.md
openspec/changes/runtime-bugfixes/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/spanish-ux-discord-locale/: design.md  (+3 more)
scripts/: check_awaited_execute.py
tests/: __init__.py  conftest.py  test_app_entry.py  test_audit_listener.py  test_bot.py  test_bot_load_resilience.py  test_brand.py  test_cache.py  test_checks.py  test_ci_config.py  test_code_quality_config.py  test_config.py  test_confirm_view.py  test_core_cog.py  test_core_help_builder.py  test_database.py  test_economy_config_model.py  test_economy_service.py  test_embeds.py  test_ephemeral_standard.py  test_greeting_config.py  test_greeting_db.py  test_greeting_service.py  test_greetings_cog.py  test_guild_service.py  test_i18n.py  test_image_service.py  test_infraction_db.py  test_infraction_service.py  test_logging_service.py  test_makefile_config.py  test_manual.py  test_member_model.py  test_migrations.py  test_mypy_config.py  test_ocio_cog.py  test_ocio_i18n.py  test_paginator.py  test_phase3_decorators.py  test_precommit_config.py  (+29 more)
tests/contract/: test_ticket_invariants.py
tests/integration/: test_moderation_flow.py  test_ticket_flow.py  test_xp_flow.py
tests/property/: test_economy_math.py  test_economy_math_smoke.py
(+420 files in other folders)
