[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebulosabot"
version = "0.1.0"
description = "Discord bot with moderation, economy, and ticket system — powered by Supabase"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nebulosa Team"},
]
requires-python = ">=3.11"
keywords = ["discord", "bot", "supabase", "moderation", "tickets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Discord.py",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "discord.py>=2.3",
    "supabase>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Repository = "https://github.com/gentle-programming/NebulosaBot"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.setuptools.package-data]
bot = ["*.py"]
