[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebulosabot"
version = "0.1.0"
description = "Discord bot with moderation, economy, and ticket system — powered by Supabase"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nebulosa Team"},
]
requires-python = ">=3.11"
keywords = ["discord", "bot", "supabase", "moderation", "tickets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Discord.py",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "discord.py>=2.3",
    "supabase>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "hypothesis>=6.100",
    "freezegun>=1.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.8",
]

[project.urls]
Repository = "https://github.com/gentle-programming/NebulosaBot"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=bot --cov-fail-under=70 --randomly-seed=42"
filterwarnings = [
    # discord.py 2.x triggers this under PYTHONASYNCIODEBUG=1
    "ignore:.*coroutine.*is not a coroutine:DeprecationWarning",
    # pytest-asyncio internal deprecation on Python 3.14
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
    # hypothesis deadline flake on slow CI runners (handled via @settings(deadline=None))
    "ignore::hypothesis.errors.HypothesisDeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.setuptools.package-data]
bot = ["*.py"]

# --- QA tooling (rama-c-qa-tooling PR1) ---

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["bot"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
disable_error_code = "attr-defined"
# Scoped to bot/bot.py:256-264 ctx._guild_config tech debt.
# Targeted per-file override (narrower than project-wide suppression):
[[tool.mypy.overrides]]
module = "bot.bot"
disable_error_code = ["attr-defined"]

[tool.bandit]
exclude_dirs = ["tests", "dashboard"]
