[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebulosabot"
version = "0.1.0"
description = "Discord bot with moderation, economy, and ticket system — powered by Supabase"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nebulosa Team"},
]
requires-python = ">=3.11"
keywords = ["discord", "bot", "supabase", "moderation", "tickets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Discord.py",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "discord.py>=2.3",
    "pillow>=11.0",
    "supabase>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "hypothesis>=6.100",
    "freezegun>=1.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.8",
]

[project.urls]
Repository = "https://github.com/gentle-programming/NebulosaBot"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=bot --cov-fail-under=75 --randomly-seed=42"
filterwarnings = [
    # discord.py 2.x triggers this under PYTHONASYNCIODEBUG=1
    "ignore:.*coroutine.*is not a coroutine:DeprecationWarning",
    # pytest-asyncio internal deprecation on Python 3.14
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
    # hypothesis deadline flake on slow CI runners (handled via @settings(deadline=None))
    "ignore::hypothesis.errors.HypothesisDeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.setuptools.package-data]
bot = ["*.py"]

# --- QA tooling (rama-c-qa-tooling PR1) ---

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "S",    # bandit/security
    "C4",   # comprehensions
    "C90",  # mccabe complexity
    "RET",  # return
    "T20",  # print
    "ARG",  # unused arguments
    "DTZ",  # datetime timezone
    "EM",   # errmsg
    "T10",  # debugger
    "TRY",  # tryceratops
    "RSE",  # raise
    "FLY",  # flynt
    "PERF", # perflint
    "FURB", # refurb
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# tests/ — allow assert, print, unused args in test files
"tests/**/*.py" = ["S101", "S105", "S106", "ARG", "T20", "TRY003", "EM101", "FURB110", "RET504", "RET505", "PERF401", "SIM108"]
# PR1 broad debt allowances — rules are ENABLED but violations suppressed.
# PR2-PR5 will progressively remove these as debt is cleared.
"bot/**/*.py" = ["S", "C4", "C90", "RET", "T20", "ARG", "DTZ", "EM", "T10", "TRY", "RSE", "FLY", "PERF", "FURB", "SIM105", "SIM108", "SIM103", "RUF059", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["bot"]

[tool.mypy]
strict = true
python_version = "3.11"
# Per-file overrides — narrowed in tooling-rigor PR3 (Phase 4-6).
# Only genuinely justified overrides remain (discord.py stub limitations).
[[tool.mypy.overrides]]
module = "bot.bot"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "bot.cogs.*"
disable_error_code = ["attr-defined", "no-untyped-def", "arg-type", "type-arg", "untyped-decorator", "no-untyped-call", "unused-ignore"]

[[tool.mypy.overrides]]
module = "bot.services.*"
disable_error_code = ["attr-defined", "no-any-return", "no-untyped-def", "arg-type", "type-arg"]

[[tool.mypy.overrides]]
module = "bot.core.*"
disable_error_code = ["no-any-return", "type-arg"]

[[tool.mypy.overrides]]
module = "bot.listeners.*"
disable_error_code = ["assignment", "arg-type"]

[[tool.mypy.overrides]]
module = "bot.models.*"
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["attr-defined", "no-any-return", "no-untyped-def", "assignment", "arg-type", "type-arg", "untyped-decorator", "no-untyped-call", "unused-ignore"]

[tool.bandit]
exclude_dirs = ["tests", "dashboard"]
